# ChatServer

./: README.md
client/: Resource.rc  TalkWindowMenu.rc  main.cpp  resource.h  resource1.h
client/ChatWndProc/: ChatWndProc.h  WindowStatus.cpp  WindowStatus.h
client/ChatWndProc/WndProc/: IdPassFindWndProc.cpp  IdPassFindWndProc.h  LoadingWndProc.cpp  LoadingWndProc.h  LoginWndProc.cpp  LoginWndProc.h  MainWndProc.cpp  MainWndProc.h  NewPassSetWndProc.cpp  NewPassSetWndProc.h  RegisterWndProc.cpp  RegisterWndProc.h  TalkDisplayWndProc.cpp  TalkDisplayWndProc.h  TalkWndProc.cpp  TalkWndProc.h
client/body/: Win32APIWrapper.cpp  chat_client.cpp  crypto_proc.cpp  message_proc.cpp
client/header/: ThreadedSet.hpp  Win32APIWrapper.h  chat_client.h  chat_message.hpp  crypto_proc.h  message_proc.h
server/: CMakeLists.txt  main.cpp
server/application/: Logger.cpp  Logger.h  ServerTerminal.cpp  ServerTerminal.h  ThreadQueue.h  ThreadedSet.hpp  crypto_proc.cpp  crypto_proc.h
server/config/: connection.conf
server/db/: account_proc.cpp  account_proc.h  connector.cpp  connector.h
server/network/: chat_message.hpp  chat_participant.h  chat_room.cpp  chat_room.h  chat_server.cpp  chat_server.h  chat_server_interface.h  chat_session.cpp  chat_session.h
stress_tester/: chat_message.hpp  client.cpp  connect_conf.conf  crypto_proc.cpp  crypto_proc.h  main.cpp
